...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- POSTER: edge-to-edge -->
            <ImageView
                android:id="@+id/OrganizerManageEventViewImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/poster" />

            <!-- OTHER CONTENT -->
...
                            android:text="Actions"
                            android:textColor="@color/lightText"
                            android:textSize="@dimen/font_subheading_size"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/OrganizerManageEventUpdatePoster"
                            style="@style/AppButton"
                            android:text="Update Poster"
                            app:icon="@drawable/ic_poster" />

                        <Button
                            android:id="@+id/OrganizerManageEventViewEntrantMap"
...
                            android:id="@+id/OrganizerManageEventViewEntrantList"
                            style="@style/AppButton"
                            android:text="View Entrant List"
                            app:icon="@drawable/event_list" />

                        <Button
                            android:id="@+id/OrganizerManageEventInviteEntrant"
                            style="@style/AppButton"
                            android:text="Invite Specific Entrant"
                            app:icon="@drawable/profile" />

                        <Button
                            android:id="@+id/OrganizerManageEventShareQRCode"
                            style="@style/AppButton"
                            android:text="Share QR code"
                            app:icon="@drawable/ic_camera" />

                        <Button
                            android:id="@+id/OrganizerManageEventAddOrganizer"
                            style="@style/AppButton"
                            android:text="Add Organizers"
                            app:icon="@drawable/ic_plus_circle" />

                        <Button
                            android:id="@+id/OrganizerManageEventReplaceDeclined"
                            style="@style/AppButton"
                            android:text="Replace Declined"
                            app:icon="@drawable/ic_arrows"/>

                    </LinearLayout>

...
