...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/OrganizerEntrantSearchTitleCard"
        app:layout_constraintBottom_toTopOf="@+id/OrganizerEntrantConfirmationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/OrganizerEntrantList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/OrganizerEntrantConfirmationButton"
                app:layout_constraintStart_toStartOf="parent"
...
