...
                android:minWidth="0dp"
                android:padding="0dp"
                android:textAllCaps="false"
                android:textColor="@color/darkText"
                android:textSize="@dimen/font_heading_size"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@id/OrganizerSampleAttendeesCountText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/OrganizerSampleAttendeesCountText" />

            <EditText
                android:id="@+id/OrganizerSampleAttendeesCountText"
                android:layout_width="0dp"
...
                android:layout_height="44dp"
                android:backgroundTint="@color/accent_first"
                android:text="Cancel"
                android:textColor="@color/darkText"
                android:textSize="@dimen/font_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/OrganizerSampleAttendeesSampleButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/OrganizerSampleAttendeesSampleButton"
                android:layout_width="130dp"
...
